--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
                 <artifactId>jakarta.annotation-api</artifactId>
                 <version>3.0.0-M1</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.13.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
