--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>jakarta.annotation</groupId>
                 <artifactId>jakarta.annotation-api</artifactId>
-                <version>3.0.0-M1</version>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
